Project1/force-app/main/default/objects/Account/fields/amount__c.field-meta.xml
<CustomField>
    <fullName>amount__c</fullName>
    <label>amount</label>
    <summarizedField>Custom_Object1__c.amount__c</summarizedField>
    <summaryForeignKey>Custom_Object1__c.Account_masterdetail__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>