Project1/force-app/main/default/objects/Account/fields/first_picklist__c.field-meta.xml
<CustomField>
    <fullName>first_picklist__c</fullName>
    <label>first picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>one</fullName>
            </value>
            <value>
                <fullName>two</fullName>
            </value>
            <value>
                <fullName>three</fullName>
            </value>
            <value>
                <fullName>four</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>