Project1/force-app/main/default/objects/Account/fields/Object2__c.field-meta.xml
<CustomField>
    <fullName>Object2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Custom Object2</label>
    <referenceTo>Custom_Object2__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>