Project1/force-app/main/default/objects/Account/fields/Text_test__c.field-meta.xml
<CustomField>
    <fullName>Text_test__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Text test</label>
    <length>9</length>
    <type>Text</type>
</CustomField>