Project1/force-app/main/default/objects/Account/recordTypes/new_customer.recordType-meta.xml
<RecordType>
    <fullName>new_customer</fullName>
    <active>true</active>
    <label>new customer</label>
</RecordType>